# semantic-cache-gateway

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml  requirements.txt  scratch.py  seed_key.py
configs/: __init__.py  cost_config.py  groq_config.py  logger_config.py  postgres_config.py  redis_config.py
grafana/dashboards/: gateway_overview.json
models/: api_key.py  request_logs.py
providers/: base.py  fallback_provider.py  groq_provider.py  ollama_provider.py
routing/: query_complexity.py  query_router.py
utils/: auth.py  db.py  embedder.py  groq_provider.py  logging.py  normalize_query.py  vector_store.py
