[project]
name = "llm-semantic-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
