[project]
name = "llm-semantic-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlmodel>=0.0.39",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
